@@ -1,3 +1,7 @@
+2006-02-07  Jonathan Graehl  <graehl@isi.edu>
+
+	* graehl.mk (LARGEFILEFLAGS): added default support for >4g files (linux)
+
 2005-11-16  Jonathan Graehl  <graehl@isi.edu>
 
 	* info_debug.hpp: renamed from Debug.h (conflict with srilm's Debug.h)
